--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
-    <string name="title_activity_add_reminder">AddReminderActivity</string>
+    <string name="title_activity_add_reminder">Add Reminder</string>
+    <string name="title_activity_reminder_preview">ReminderPreviewActivity</string>
 </resources>
