--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="drawer_close">Close</string>
     <string name="title_activity_add_reminder">Add Reminder</string>
     <string name="title_activity_reminder_preview">ReminderPreviewActivity</string>
+    <string name="title_activity_sample_fab">SampleFABActivity</string>
 </resources>
